--- a/src/scss/blocks/completed-projects.scss
+++ b/src/scss/blocks/completed-projects.scss
@@ -33,6 +33,7 @@
     padding: 40px 50px;
   }
 }
+
 .completed-projects__list {
   display: flex;
   flex-direction: column;
@@ -53,12 +54,12 @@
 
 .completed-projects--index {
   margin: 0;
-  padding: 40px 0 30px 0;
+  padding: 40px 0 30px;
 
   background: linear-gradient(180deg, #453fa9 0%, #675fc6 100%);
 
   @media (min-width: $desktop-width) {
-    padding: 60px 0 70px 0;
+    padding: 60px 0 70px;
   }
 
   & .completed-projects__title {
