--- a/src/scss/blocks/services-solutions.scss
+++ b/src/scss/blocks/services-solutions.scss
@@ -7,6 +7,7 @@
     padding: 35px 0;
   }
 }
+
 .services-solutions__title {
   margin-bottom: 9px;
 
@@ -14,6 +15,7 @@
     margin-bottom: 14px;
   }
 }
+
 .services-solutions__about {
   margin: 0;
   margin-bottom: 30px;
@@ -26,6 +28,7 @@
     margin-bottom: 60px;
   }
 }
+
 .services-solutions__list {
   display: flex;
   flex-direction: column;
@@ -39,7 +42,6 @@
   @media (min-width: $tablet-width) {
     gap: 30px;
   }
-
   @media (min-width: $desktop-width) {
     gap: 55px;
   }
@@ -52,7 +54,6 @@
   @media (max-width: $max-mobile-width) {
     background-color: $white-color;
   }
-
   @media (min-width: $desktop-width) {
     flex-direction: row;
     justify-content: space-between;
@@ -60,16 +61,19 @@
     gap: 70px;
   }
 }
+
 .services-solutions__card-content {
   display: flex;
   flex-direction: column;
+
   @media (max-width: $max-mobile-width) {
-    padding: 15px 18px 30px 18px;
+    padding: 15px 18px 30px;
   }
   @media (max-width: $max-tablet-width) {
     padding-bottom: 30px;
   }
 }
+
 .services-solutions__card-title {
   display: block;
   margin: 0;
@@ -87,6 +91,7 @@
     margin-bottom: 35px;
   }
 }
+
 .services-solutions__card-title-link {
   display: flex;
   align-items: center;
@@ -108,14 +113,17 @@
 
   &:hover {
     color: $button-color;
+
     & .services-solutions__card-title-icon {
       fill: $button-color;
     }
   }
+
   &:focus-visible {
     border: 2px;
     outline: solid 2px $blue-color;
   }
+
   &:active {
     opacity: 0.7;
   }
@@ -148,31 +156,38 @@
   &:hover {
     color: $blue-color;
   }
+
   &:focus-visible {
     border: 2px;
     outline: solid 2px $blue-color;
   }
+
   &:active {
     opacity: 0.7;
   }
 }
+
 .services-solutions__image-wrapper {
   flex-shrink: 0;
   max-width: 432px;
 }
+
 .services-solutions__image {
   display: flex;
 
   border-radius: 5px;
+
   @media (max-width: $max-mobile-width) {
     height: 313px;
 
     object-fit: none;
   }
 }
+
 .services-solutions__item:nth-child(2n) {
   @media (min-width: $desktop-width) {
     justify-content: flex-start;
+
     & .services-solutions__image-wrapper {
       order: -1;
     }
