--- a/src/scss/blocks/work-with-us.scss
+++ b/src/scss/blocks/work-with-us.scss
@@ -24,11 +24,11 @@
     grid-template-columns: repeat(3, 1fr);
     row-gap: 35px;
   }
-
   @media (min-width: $desktop-width) {
     grid-template-columns: repeat(5, 1fr);
   }
 }
+
 .work-with-us__item {
   display: flex;
   justify-content: center;
@@ -37,6 +37,6 @@
   max-height: 110px;
 
   background-color: $white-color;
-  border: 1px solid rgba(132, 125, 207, 0.23);
+  border: 1px solid rgb(132 125 207 / 23%);
   border-radius: 5px;
 }
