--- a/src/scss/blocks/comparison.scss
+++ b/src/scss/blocks/comparison.scss
@@ -89,6 +89,10 @@
 
   gap: 5px;
 
+  @media (min-width: $tablet-width) {
+    max-width: 950px;
+  }
+
   @media (min-width: $desktop-width) {
     max-width: 1441px;
     margin: 0 auto;
