добавил в layout переменные разрешений и заменил в html цифры на переменные

--- a/src/views/pages/configurator-safe-region.j2
+++ b/src/views/pages/configurator-safe-region.j2
@@ -142,9 +142,9 @@
               <div class="sfr__summary-image-wrapper">
                 <span class="sfr__summary-title">Конфигурация «Безопасный&nbsp;регион»</span>
                 <picture>
-                  <source type="image/webp" media="(min-width: 768px)" srcset="@img/sfr-summary-desktop.webp 1x, @img/sfr-summary-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/sfr-summary-desktop.webp 1x, @img/sfr-summary-desktop@2x.webp 2x">
                   <source type="image/webp" srcset="@img/sfr-summary-mobile.webp 1x, @img/sfr-summary-mobile@2x.webp 2x">
-                  <source media="(min-width: 768px)" srcset="@img/sfr-summary-desktop.png 1x, @img/sfr-summary-desktop@2x.png 2x">
+                  <source media="(min-width: {{tabletWidth}})" srcset="@img/sfr-summary-desktop.png 1x, @img/sfr-summary-desktop@2x.png 2x">
                   <img class="sfr__summary-image" src="@img/sfr-summary-mobile.png" srcset="@img/sfr-summary-mobile@2x.png 2x" alt="">
                 </picture>
               </div>
