--- a/src/views/blocks/blog-article.j2
+++ b/src/views/blocks/blog-article.j2
@@ -18,11 +18,11 @@
     </div>
     <div class="blog-article__main">
       <picture>
-        <source type="image/webp" media="(min-width: 1181px)" srcset="@img/blog-image-desktop.webp 1x, @img/blog-image-desktop@2x.webp 2x">
-        <source type="image/webp" media="(min-width: 768px)" srcset="@img/blog-image-desktop.webp 1x, @img/blog-image-desktop@2x.webp 2x">
+        <source type="image/webp" media="(min-width: {{desktopWidth}})" srcset="@img/blog-image-desktop.webp 1x, @img/blog-image-desktop@2x.webp 2x">
+        <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/blog-image-desktop.webp 1x, @img/blog-image-desktop@2x.webp 2x">
         <source type="image/webp" srcset="@img/blog-image-mobile.webp 1x, @img/blog-image-mobile@2x.webp 2x">
-        <source media="(min-width: 1181px)" srcset="@img/blog-image-desktop.jpg 1x, @img/blog-image-desktop@2x.jpg 2x">
-        <source media="(min-width: 768px)" srcset="@img/blog-image-desktop.jpg 1x, @img/blog-image-desktop@2x.jpg 2x">
+        <source media="(min-width: {{desktopWidth}})" srcset="@img/blog-image-desktop.jpg 1x, @img/blog-image-desktop@2x.jpg 2x">
+        <source media="(min-width: {{tabletWidth}})" srcset="@img/blog-image-desktop.jpg 1x, @img/blog-image-desktop@2x.jpg 2x">
         <img class="blog-article__image" src="@img/blog-image-mobile.jpg" srcset="@img/blog-image-mobile@2x.jpg 2x" alt="Фотография центра обработки данных">
       </picture>
       <p class="blog-article__paragraph blog-article__text">
