--- a/src/views/blocks/blog.j2
+++ b/src/views/blocks/blog.j2
@@ -36,9 +36,9 @@
               </div>
               <a class="blog-card__image-link" href="./blog-page.html">
                 <picture>
-                  <source type="image/webp" media="(min-width: 768px)" srcset="@img/blog-card-{{ blogCardCounter }}-desktop.webp 1x, @img/blog-card-{{ blogCardCounter }}-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/blog-card-{{ blogCardCounter }}-desktop.webp 1x, @img/blog-card-{{ blogCardCounter }}-desktop@2x.webp 2x">
                   <source type="image/webp" srcset="@img/blog-card-{{ blogCardCounter }}-mobile.webp 1x, @img/blog-card-{{ blogCardCounter }}-mobile@2x.webp 2x">
-                  <source media="(min-width: 768px)" srcset="@img/blog-card-{{ blogCardCounter }}-desktop.jpg 1x, @img/blog-card-{{ blogCardCounter }}-desktop@2x.jpg 2x">
+                  <source media="(min-width: {{tabletWidth}})" srcset="@img/blog-card-{{ blogCardCounter }}-desktop.jpg 1x, @img/blog-card-{{ blogCardCounter }}-desktop@2x.jpg 2x">
                   <img class="blog-card__image" src="@img/blog-card-{{ blogCardCounter }}-mobile.jpg" srcset="@img/blog-card-{{ blogCardCounter }}-mobile@2x.jpg 2x" alt="">
                 </picture>
               </a>
@@ -69,9 +69,9 @@
               </div>
               <a class="blog-card__image-link" href="./blog-page.html">
                 <picture>
-                  <source type="image/webp" media="(min-width: 768px)" srcset="@img/blog-card-{{ blogCardCounter }}-desktop.webp 1x, @img/blog-card-{{ blogCardCounter }}-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/blog-card-{{ blogCardCounter }}-desktop.webp 1x, @img/blog-card-{{ blogCardCounter }}-desktop@2x.webp 2x">
                   <source type="image/webp" srcset="@img/blog-card-{{ blogCardCounter }}-mobile.webp 1x, @img/blog-card-{{ blogCardCounter }}-mobile@2x.webp 2x">
-                  <source media="(min-width: 768px)" srcset="@img/blog-card-{{ blogCardCounter }}-desktop.jpg 1x, @img/blog-card-{{ blogCardCounter }}-desktop@2x.jpg 2x">
+                  <source media="(min-width: {{tabletWidth}})" srcset="@img/blog-card-{{ blogCardCounter }}-desktop.jpg 1x, @img/blog-card-{{ blogCardCounter }}-desktop@2x.jpg 2x">
                   <img class="blog-card__image" src="@img/blog-card-{{ blogCardCounter }}-mobile.jpg" srcset="@img/blog-card-{{ blogCardCounter }}-mobile@2x.jpg 2x" alt="">
                 </picture>
               </a>
