--- a/src/views/blocks/team.j2
+++ b/src/views/blocks/team.j2
@@ -7,9 +7,9 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
               <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
+              <source media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
             </picture>
@@ -33,9 +33,9 @@
           </div>
           <figure class="team__photo">
             <picture>
-              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
               <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
+              <source media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
             </picture>
@@ -55,9 +55,9 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
               <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
+              <source media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
             </picture>
@@ -76,9 +76,9 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
               <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
+              <source media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
             </picture>
@@ -98,9 +98,9 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
               <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
+              <source media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
             </picture>
@@ -119,9 +119,9 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
               <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
+              <source media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
             </picture>
@@ -141,9 +141,9 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
               <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
+              <source media="(min-width: {{tabletWidth}})" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
             </picture>
