--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -73,3 +73,4 @@
 @import "./blocks/services-solutions.scss";
 @import "./blocks/conf-about.scss";
 @import "./blocks/sfr.scss";
+@import "./blocks/shd.scss";
