--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -65,10 +65,6 @@
   border: none;
   box-shadow: inset 1px 1px 0 rgb(0 0 0 / 15%);
 
-  &:hover,
-  &:focus {
-    outline: 2px solid $blue-color;
-  }
 }
 
 .form__field--textarea {
@@ -81,6 +77,11 @@
   display: flex;
   min-width: 73px;
   padding-right: 8px;
+
+  &:hover,
+  &:focus {
+    outline: 2px solid $blue-color;
+  }
 }
 
 .form__field[type="number"]::-webkit-inner-spin-button {
@@ -172,16 +173,11 @@
   color: $grey-color;
   background-color: $white-color;
   border: 1px solid #ebebeb;
-  transition: all 0.3s ease;
-  box-sizing: content-box;
+  transition: background-color, color 0.3s ease;
 
   &:hover {
-    position: relative;
-    border-color: $blue-color;
-    border-width: 2px;
-    padding: 9px 14px;
+    color: $blue-color;
     background-color: $bg2-color;
-    z-index: 1;
   }
 
   &:active {
@@ -197,8 +193,58 @@
   z-index: 1;
 }
 .form__square-radio-input:focus + .form__square-radio-mark {
-  border-color: $blue-color;
+  border-color: $button-color;
   background-color: $bg2-color;
+}
+
+.form__radio {
+  display: flex;
+}
+.form__radio-input {
+}
+.form__radio-mark {
+  position: relative;
+  flex-shrink: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid $blue-color;
+  transition: background-color 0.2s ease;
+
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    content: "";
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background-color: $white-color;
+    transform: translate(-50%, -50%);
+    transition: background-color 0.2s ease;
+  }
+
+  &:hover {
+    background: #f7f7fd;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
+
+    &::before {
+      background-color: #ebebeb;
+    }
+  }
+}
+.form__radio-input:checked + .form__radio-mark {
+  &::before {
+    background-color: $blue-color;
+  }
+}
+.form__radio-input:focus + .form__radio-mark {
+  border-color: $button-color;
+  &::before {
+    background-color: $button-color;
+  }
+}
+.form__radio-text {
 }
 
 // Настройка выпадающего селекта
