--- a/src/views/pages/configurator-shd.j2
+++ b/src/views/pages/configurator-shd.j2
@@ -82,6 +82,147 @@
                 </li>
               </ul>
             </fieldset>
+            <ul class="shd__groups">
+              <li class="shd__groups-item">
+                <fieldset class="shd__group shd__group--platform">
+                  <legend class="visually-hidden">Платформа</legend>
+                  <p class="shd__group-title">Платформа</p>
+                  <div class="shd__group-content">
+                    <ul class="shd__group-list">
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-platfrom" id="" value="2ГБ EonStor DS 1000 Gen2 2U/12bay (1012G2-B)" checked>
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text form__radio-text">2ГБ EonStor DS 1000 Gen2 2U/12bay (1012G2-B)</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-platfrom" id="" value="2ГБ EonStor DS 1000 Gen2 2U/24bay (1024G2B-B)">
+                          <span class="shd__radio-mark shd__group-row-input form__radio-mark"></span>
+                          <span class="shd__price">610$</span>
+                          <span class="shd__group-row-text form__radio-text">2ГБ EonStor DS 1000 Gen2 2U/24bay (1024G2B-B)</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-platfrom" id="" value="2ГБ EonStor DS 2000 Gen2 2U/12bay (2012G2-B)">
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">610$</span>
+                          <span class="shd__group-row-text form__radio-text">2ГБ EonStor DS 2000 Gen2 2U/12bay (2012G2-B)</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-platfrom" id="" value="2ГБ EonStor DS 2000 Gen2 2U/24bay (2024G2B-B)">
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text form__radio-text">2ГБ EonStor DS 2000 Gen2 2U/24bay (2024G2B-B)</span>
+                        </label>
+                      </li>
+                    </ul>
+                  </div>
+                </fieldset>
+              </li>
+              <li class="shd__groups-item">
+                <fieldset class="shd__group shd__group--hdd">
+                  <legend class="visually-hidden">Жесткие диски</legend>
+                  <p class="shd__group-title">Жесткие диски</p>
+                  <div class="shd__group-content">
+                    <div class="shd__hdd-slots-row shd__group-row shd__group-row--centered">
+                      <p class="shd__hdd-slots-num">Допустимое количество слотов: <span class="shd__hdd-slots-num-val" id="shd-hdd-slots-num">12</span></p>
+                      <ul class="form__square-radio-list">
+                        <li class="form__square-radio-item">
+                          <label class="form__square-radio">
+                            <input class="form__square-radio-input visually-hidden" type="radio" name="shd-group-hdd" id="" value="SAS">
+                            <span class="form__square-radio-mark">SAS</span>
+                          </label>
+                        </li>
+                        <li class="form__square-radio-item">
+                          <label class="form__square-radio">
+                            <input class="form__square-radio-input visually-hidden" type="radio" name="shd-group-hdd" id="" value="SSD">
+                            <span class="form__square-radio-mark">SAS</span>
+                          </label>
+                        </li>
+                        <li class="form__square-radio-item">
+                          <label class="form__square-radio">
+                            <input class="form__square-radio-input visually-hidden" type="radio" name="shd-group-hdd" id="" value="SATA" checked>
+                            <span class="form__square-radio-mark">SATA</span>
+                          </label>
+                        </li>
+                      </ul>
+                    </div>
+                    <ul class="shd__group-list">
+                      <li class="shd__group-item">
+                        <label class="shd__group-row shd__group-row--centered">
+                          <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-hdd-600gb" value="0" min="0" max="12">
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text">600 GB 10,000 rpm SAS12G 2.5</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row shd__group-row--centered">
+                          <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-hdd-1200gb" value="0" min="0" max="12">
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text">1200 GB 10,000 rpm SAS12G 2.5</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row shd__group-row--centered">
+                          <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-hdd-1800gb" value="0" min="0" max="12">
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text">1800 GB 10,000 rpm SAS12G 2.5</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row shd__group-row--centered">
+                          <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-hdd-2tb" value="0" min="0" max="12">
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text">2 TB 7200 rpm 12 Gb SAS 3.5</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row shd__group-row--centered">
+                          <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-hdd-2400gb" value="0" min="0" max="12">
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text">2400 GB 10,000 rpm SAS12G 2.5</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row shd__group-row--centered">
+                          <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-hdd-4tb" value="0" min="0" max="12">
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text">4 TB 7200 rpm 12 Gb SAS 3.5</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row shd__group-row--centered">
+                          <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-hdd-6tb" value="0" min="0" max="12">
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text">6 TB 7200 rpm 12 Gb SAS 3.5</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row shd__group-row--centered">
+                          <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-hdd-8tb" value="0" min="0" max="12">
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text">8 TB 7200 rpm 12 Gb SAS 3.5</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row shd__group-row--centered">
+                          <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-hdd-10tb" value="0" min="0" max="99">
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text">10 TB 7200 rpm 12 Gb SAS 3.5</span>
+                        </label>
+                      </li>
+                    </ul>
+                  </div>
+                </fieldset>
+              </li>
+            </ul>
+
           </form>
         </div>
       </div>
