--- a/src/views/pages/configurator-shd.j2
+++ b/src/views/pages/configurator-shd.j2
@@ -24,7 +24,7 @@
       <div class="container">
         <div class="shd__content section__content">
           <h1 class="shd__title title">Конфигуратор СХД</h1>
-          <form class="shd__form form" id="shd-form" action="" method="post">
+          <form class="shd__form form" id="shd-form" action="https://echo.htmlacademy.ru" method="post">
             <fieldset class="shd__common">
               <legend class="visually-hidden">Общее</legend>
               <ul class="shd__topology-list form__square-radio-list">
@@ -267,8 +267,137 @@
                   </div>
                 </fieldset>
               </li>
+              <li class="shd__groups-item">
+                <fieldset class="shd__group shd__group--cache">
+                  <legend class="visually-hidden">Cache</legend>
+                  <p class="shd__group-title">Cache</p>
+                  <div class="shd__group-content">
+                    <ul class="shd__group-list">
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-cache" id="" value="4GB DDR-IV DIMM module for EonStor DS 3000U,DS4000U,DS4000 Gen2, GS/GSe, and EonServ 7000 series">
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text form__radio-text">4GB DDR-IV DIMM module for EonStor DS 3000U,DS4000U,DS4000 Gen2, GS/GSe, and EonServ 7000 series</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-cache" id="" value="8GB DDR-IV DIMM module for EonStor DS 3000U,DS4000U,DS4000 Gen2, GS/GSe, and EonServ 7000 series">
+                          <span class="shd__radio-mark shd__group-row-input form__radio-mark"></span>
+                          <span class="shd__price">610$</span>
+                          <span class="shd__group-row-text form__radio-text">8GB DDR-IV DIMM module for EonStor DS 3000U,DS4000U,DS4000 Gen2, GS/GSe, and EonServ 7000 series</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-cache" id="" value="16GB DDR-IV DIM module for EonStor DS 4000U, CS and GS families">
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">610$</span>
+                          <span class="shd__group-row-text form__radio-text">16GB DDR-IV DIM module for EonStor DS 4000U, CS and GS families</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-cache" id="" value="32GB DDR-IV DIMM module for EonStor DS 3000U,DS4000U,DS4000 Gen2, GS/GSe, and EonServ 7000 series">
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text form__radio-text">32GB DDR-IV DIMM module for EonStor DS 3000U,DS4000U,DS4000 Gen2, GS/GSe, and EonServ 7000 series</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-cache" id="" value="не требуется" checked>
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__group-row-text form__radio-text">не требуется</span>
+                        </label>
+                      </li>
+                    </ul>
+                  </div>
+                </fieldset>
+              </li>
+              <li class="shd__groups-item">
+                <fieldset class="shd__group shd__group--soft">
+                  <legend class="visually-hidden">Программное обеспечение</legend>
+                  <p class="shd__group-title">Программное<br>обеспечение</p>
+                  <div class="shd__group-content">
+                    <ul class="shd__group-list">
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-soft" id="" value="Лицензия EonStor DS Advanced Automated Storage Tiering (2 уровня)">
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text form__radio-text">Лицензия EonStor DS Advanced Automated Storage Tiering (4 уровня)</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-soft" id="" value="8GB DDR-IV DIMM module for EonStor DS 3000U,DS4000U,DS4000 Gen2, GS/GSe, and EonServ 7000 series">
+                          <span class="shd__radio-mark shd__group-row-input form__radio-mark"></span>
+                          <span class="shd__price">610$</span>
+                          <span class="shd__group-row-text form__radio-text">8GB DDR-IV DIMM module for EonStor DS 3000U,DS4000U,DS4000 Gen2, GS/GSe, and EonServ 7000 series</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-soft" id="" value="Лицензия кэширования на SSD для EonStor DS Infortrand EonStor DS SSD Cache License for selected models">
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">610$</span>
+                          <span class="shd__group-row-text form__radio-text">Лицензия кэширования на SSD для EonStor DS Infortrand EonStor DS SSD Cache License for selected models</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-soft" id="" value="Лицензия удалённой репликации для EonStor DS">
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text form__radio-text">Лицензия удалённой репликации для EonStor DS</span>
+                        </label>
+                      </li>
+                      <li class="shd__group-item">
+                        <label class="shd__group-row form__radio">
+                          <input class="shd__group-row-input form__radio-input visually-hidden" type="radio" name="shd-soft" id="" value="Лицензия улучшенной локальной репликации для EonStor DS (Snapshot и Volume Copy/Mirror)">
+                          <span class="shd__radio-mark form__radio-mark"></span>
+                          <span class="shd__price">860$</span>
+                          <span class="shd__group-row-text form__radio-text">Лицензия улучшенной локальной репликации для EonStor DS (Snapshot и Volume Copy/Mirror)</span>
+                        </label>
+                      </li>
+                    </ul>
+                  </div>
+                </fieldset>
+              </li>
+              <li class="shd__groups-item">
+                <fieldset class="shd__group shd__group--reserve-copy">
+                  <legend class="visually-hidden">Резервное копирование</legend>
+                  <p class="shd__group-title">Резервное<br>копирование</p>
+                  <div class="shd__group-content">
+                    <label class="shd__group-row shd__group-row--centered">
+                      <input class="shd__group-row-input shd__number-field form__field" type="number" name="shd-reserve-copy" value="0" min="0" max="99">
+                      <span class="shd__price">860$</span>
+                      <span class="shd__group-row-text">Veeam Backup & Replication (Standard)</span>
+                    </label>
+                  </div>
+                </fieldset>
+              </li>
+              <li class="shd__groups-item">
+                <fieldset class="shd__group shd__group--add-info">
+                  <legend class="visually-hidden">Дополнительная информация</legend>
+                  <p class="shd__group-title">Дополнительная информация</p>
+                  <div class="shd__group-content">
+                    <div class="shd__group-row shd__group-row--centered">
+                      <span class="shd__group-row-text">Все необходимые кабели, винты и прочее учтены в заказе</span>
+                    </div>
+                  </div>
+                </fieldset>
+              </li>
             </ul>
-
+            <div class="shd__count-wrapper">
+              <label class="shd__count">
+                <span class="shd__count-text">Количество</span>
+                <input class="form__field" type="number" name="shd-count" value="1" min="1" max="99">
+              </label>
+              <button class="shd__submit-button form__submit-buttom button" type="submit">Отправить заявку</button>
+            </div>
           </form>
         </div>
       </div>
